# Sitebuilder1.0

./: .gitignore  Makefile  README.md  api-contracts.md  business_profile.json  package-lock.json  package.json  session_state.json  wrangler.toml
SitebuilderInspector/: worker.js  wrangler.toml
cloudflare/: plugin-onboarding-spec.md  waf-rules.md
deploy/: README.md  install-polygon-webhook.sh  install-solana-webhook.sh
design_index/: designs.json  embeddings.json
docs/: customer-profile-proof.md
migrations/: 0001_init.sql  0002_onboarding_and_scan.sql  0003_business_type_memory.sql  0004_site_scan_intelligence.sql  0005_site_scan_link_audit.sql  0006_business_type_catalog.sql  0007_business_type_memory_import.sql  0008_business_type_alias_catalog.sql  0009_business_type_signal_catalog.sql  0010_business_type_subtype_catalog.sql  0011_business_type_subtype_specialties.sql  0012_business_type_subtype_finance_real_estate.sql  0013_customers_and_consents.sql  0014_customer_admin_notes.sql
public/: _redirects  admin-mints.html  index.html
site/: index.html  sitemap.xml
site/about/: index.html
solana/anchor-premium-billing/programs/premium_billing/: Cargo.toml
solana/anchor-premium-billing/programs/premium_billing/src/: lib.rs
src/: build.py  build_preview.py  categorize.py  eventsEmitter.js  generate_preview.py  recommend.py  render.py  schema.py  worker.ts
templates/: base.html  palettes.json
tests/: eventsEmitter.test.js  test_build_preview.py  test_generate_preview.py  test_recommend.py  worker.catalog.test.js  worker.test.js
worker/: index.js
(+51 files in other folders)
