[package]
name = "premium_billing"
version = "0.1.0"
description = "Anchor program for Sitebuilder SPL premium grants and charges"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "premium_billing"

[features]
default = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = "0.30.1"
